--- a/docker/todo-app/tests/Dockerfile
+++ b/docker/todo-app/tests/Dockerfile
@@ -1,1 +1,7 @@
-
+FROM mjgargani/puppeteer:trybe1.0
+ADD node_modules.tar.gz .
+WORKDIR /usr/app 
+COPY . .
+RUN npm install
+EXPOSE 3000
+CMD ["npm", "test"]
