feat: docker compose

--- a/docker/todo-app/tests/Dockerfile
+++ b/docker/todo-app/tests/Dockerfile
@@ -1,7 +1,6 @@
-FROM mjgargani/puppeteer:trybe1.0
+FROM mjgargani/puppeteer:trybe1.0 AS build
 ADD node_modules.tar.gz .
 WORKDIR /usr/app 
 COPY . .
 RUN npm install
-EXPOSE 3000
 CMD ["npm", "test"]
