--- a/docker/todo-app/front-end/Dockerfile
+++ b/docker/todo-app/front-end/Dockerfile
@@ -1,7 +1,7 @@
-FROM node:14-alpine
+FROM node:14-alpine AS build
 ADD node_modules.tar.gz .
 WORKDIR /usr/app
 COPY . .
 RUN npm install
-EXPOSE 3001
+EXPOSE 3000
 CMD ["npm", "start"]
